Fix visibility of checkboxes and radios

--- a/.dev/assets/shared/css/woocommerce/radio.css
+++ b/.dev/assets/shared/css/woocommerce/radio.css
@@ -1,5 +1,6 @@
 .woocommerce-page {
 
+	& .woocommerce-shipping-methods,
 	& .wc_payment_methods {
 
 		& input[name="payment_method"] {
